# src/app.js
@@ -7,6 +7,7 @@ import "dotenv/config";
 import { apiReference } from "@scalar/express-api-reference";
 
 import authRoutes from "./v1/routes/auth.routes.js";
+import profileRoutes from "./v1/routes/profile.routes.js";
 import channelRoutes from "./v1/routes/channel.routes.js";
 import testRoutes from "./v1/routes/test.routes.js";
 
@@ -26,6 +27,7 @@ app.use(express.json());
 app.use(cookieParser());
 
 app.use("/api/v1/auth", authRoutes);
+app.use("/api/v1/profile", profileRoutes);
 app.use("/api/v1/channel", channelRoutes);
 app.use("/api/v1/test", testRoutes);
 
